--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -1,8 +1,5 @@
 {
     "@@locale": "en",
-    "counterAppBarTitle": "Counter",
-    "@counterAppBarTitle": {
-        "description": "Text shown in the AppBar of the Counter Page"
-    },
-    "takingLong": "This is taking a bit longer than expected.\nPlease be patient."
+    "takingLong": "This is taking a bit longer than expected.\nPlease be patient.",
+    "genericError": "Something went wrong."
 }
