--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -1,5 +1,7 @@
 {
     "@@locale": "en",
     "takingLong": "This is taking a bit longer than expected.\nPlease be patient.",
-    "genericError": "Something went wrong."
+    "genericError": "Something went wrong.",
+    "searchPokemon": "Search Pokemon",
+    "pokemonNotFound": "Pokemon not found."
 }
